[gd_scene load_steps=3 format=3 uid="uid://cq7li4lfjo0ew"]

[ext_resource type="Script" uid="uid://btaqlnfd4w4rh" path="res://scenes/MainMenu/main_menu.gd" id="1_f6mx3"]
[ext_resource type="Theme" uid="uid://bvug23w70yorr" path="res://assets/big_theme.tres" id="2_lf335"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f6mx3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.259294, 0.259294, 0.259294, 1)

[node name="LobbyNameLineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 27.0
offset_right = 340.0
offset_bottom = 58.0
placeholder_text = "Lobby name"

[node name="HostButton" type="Button" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 75.0
offset_right = 340.0
offset_bottom = 135.0
text = "Host"

[node name="PlayerButton" type="Button" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 27.0
offset_right = 684.0
offset_bottom = 87.0
text = "Player"

[node name="LobbyIdLineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 99.0
offset_right = 684.0
offset_bottom = 130.0
placeholder_text = "Join lobby id"

[node name="PlayerJoinButton" type="Button" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 147.0
offset_right = 684.0
offset_bottom = 207.0
disabled = true
text = "Player join"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
offset_left = 40.0
offset_top = 400.0
offset_right = 340.0
offset_bottom = 460.0
focus_mode = 0
theme = ExtResource("2_lf335")
text = "Quit"

[connection signal="pressed" from="HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="PlayerButton" to="." method="_on_player_button_pressed"]
[connection signal="pressed" from="PlayerJoinButton" to="." method="_on_player_join_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
